@@ -83,13 +83,13 @@ IF(CMAKE_COMPILER_IS_GNUCC)
   SET(ADD_CFLAGS "-pedantic -Wall -Wpointer-arith -Wredundant-decls -Wformat -Wunused ${ADD_CFLAGS}")
 
   # gcc 2.9.5 doesn't know following
-  CHECK_CFLAGS_APPEND(ADD_CFLAGS "-std=gnu99")
+  CHECK_CFLAGS_APPEND(ADD_EXCLUSIVE_CFLAGS "-std=gnu99")
   CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wdisabled-optimization")
   CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wfloat-equal")
-  CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wbad-function-cast")
+  CHECK_CFLAGS_APPEND(ADD_EXCLUSIVE_CFLAGS "-Wbad-function-cast")
 
   # gcc 3.0 doesn't know following
-  CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wdeclaration-after-statement")
+  CHECK_CFLAGS_APPEND(ADD_EXCLUSIVE_CFLAGS "-Wdeclaration-after-statement")
   CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wextra")
   CHECK_CFLAGS_APPEND(ADD_CFLAGS "-Wno-switch")
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
@@ -124,7 +124,6 @@ IF(UNIX OR APPLE)
   TEST_COMPILER_VISIBILITY()
 ENDIF(UNIX OR APPLE)
 
-ADD_DEFINITIONS(-DAFTEN_BUILD_LIBRARY)
 ADD_DEFINITIONS(-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE)
 
 CHECK_INCLUDE_FILE_DEFINE(inttypes.h HAVE_INTTYPES_H)
@@ -199,12 +198,13 @@ ENDIF(NOT DOUBLE)
 
 GENERATE_CONFIG_H()
 
-SET(CMAKE_C_FLAGS "${ADD_CFLAGS} ${CMAKE_C_FLAGS}")
+SET(CMAKE_C_FLAGS "${ADD_CFLAGS} ${ADD_EXCLUSIVE_CFLAGS} ${CMAKE_C_FLAGS}")
 
 IF(SHARED)
   ADD_LIBRARY(aften SHARED ${LIBAFTEN_SRCS})
   SET_TARGET_PROPERTIES(aften PROPERTIES VERSION ${SO_VERSION} SOVERSION ${SO_MAJOR_VERSION})
   SET_TARGET_PROPERTIES(aften PROPERTIES LINKER_LANGUAGE C)
+  SET_TARGET_PROPERTIES(aften PROPERTIES DEFINE_SYMBOL AFTEN_BUILD_LIBRARY)
   TARGET_LINK_LIBRARIES(aften ${LIBM})
   SET(INSTALL_TARGETS ${INSTALL_TARGETS} aften)
 ENDIF(SHARED)
@@ -234,10 +234,12 @@ TARGET_LINK_LIBRARIES(wavfilter aften_wav ${LIBM})
 IF(BINDINGS_CXX)
   MESSAGE("## WARNING: The C++ bindings are work-in-progress and currently untested. ##")
   Project(aften CXX)
+  SET(CMAKE_CXX_FLAGS_RELEASE "${ADD_CFLAGS} ${CMAKE_C_FLAGS_RELEASE}")
   INCLUDE_DIRECTORIES(${Aften_SOURCE_DIR}/bindings)
   ADD_LIBRARY(aftenxx SHARED bindings/aftenxx.cxx)
   SET_TARGET_PROPERTIES(aftenxx PROPERTIES VERSION ${SO_VERSION} SOVERSION ${SO_MAJOR_VERSION})
   SET_TARGET_PROPERTIES(aftenxx PROPERTIES LINKER_LANGUAGE CXX)
+  SET_TARGET_PROPERTIES(aftenxx PROPERTIES DEFINE_SYMBOL AFTENXX_BUILD_LIBRARY)
   TARGET_LINK_LIBRARIES(aftenxx aften)
   SET(INSTALL_TARGETS ${INSTALL_TARGETS} aftenxx)
   SET(INSTALL_HEADERS ${INSTALL_HEADERS} bindings/aftenxx.h)
