@@ -54,6 +54,8 @@ SHARED: Builds aften as a shared lib, as well. The API hasn't been set
         in stone, so you have been warned. ;-)
 DOUBLE: Builds aften using double precision. Beware that you won't get
         SIMD code, as the SSE code hasn't been ported to SSE2, yet.
+BINDINGS_CXX: Builds C++ bindings for aften. Include aftenxx.h in your
+        C++ project and link to aftenxx.
 
 Some tips:
 
